--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Estilos generales */
 * {
     margin: 0;
     padding: 0;
@@ -11,15 +10,13 @@ body {
     background-color: #f9f9f9;
 }
 
-/* Contenedor general */
 .container {
     width: 90%;
     margin: 0 auto;
 }
 
-/* Header */
 header {
-    background-color: #ff5a5f; /* Color vibrante para el header */
+    background-color: #ff5a5f; 
     color: #fff;
     padding: 20px 0;
 }
@@ -67,9 +64,8 @@ nav {
     display: none;
 }
 
-/* Hero section */
 .hero {
-    background-image: url('img/bol_lab_febrero_2017-1-cd65e91b.jpeg'); /* Imagen de fondo */
+    background-image: url('img/bol_lab_febrero_2017-1-cd65e91b.jpeg'); 
     background-size: cover;
     background-position: center;
     color: white;
@@ -78,7 +74,7 @@ nav {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro transparente */
+    background-color: rgba(0, 0, 0, 0.5); 
 }
 
 .hero h2 {
@@ -108,8 +104,6 @@ nav {
     background-color: #ff5a5f;
 }
 
-/* Testimonios */
-/* Testimonios */
 .testimonials {
     padding: 60px 0;
     background-color: #f4f4f4;
@@ -160,7 +154,6 @@ nav {
 }
 
 
-/* Footer */
 footer {
     background-color: #ff5a5f;
     color: white;
@@ -199,7 +192,6 @@ footer button:hover {
     border: 2px solid #ff5a5f;
 }
 
-/* Responsive */
 @media (max-width: 768px) {
     .menu {
         display: none;
