foto principal modificada

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ nav {
 }
 
 .hero {
-    background-image: url('img/bol_lab_febrero_2017-1-cd65e91b.jpeg'); 
+    background-image: url('img/mascotas-1.jpg'); 
     background-size: cover;
     background-position: center;
     color: white;
